--- a/Recursos.qrc
+++ b/Recursos.qrc
@@ -5,5 +5,6 @@
         <file>Recursos/Back 2 - copia.ico</file>
         <file>Examen_2P_JoelArias_en_US.qm</file>
         <file>Examen_2P_JoelArias_es_EC.qm</file>
+        <file>Recursos/confirmar.png</file>
     </qresource>
 </RCC>
